[gd_scene load_steps=22 format=3 uid="uid://o06dhycxveqi"]

[ext_resource type="Script" uid="uid://f65p7mjhpe20" path="res://script/frontend.gd" id="1_vs02b"]
[ext_resource type="PackedScene" uid="uid://dd7kotp8gikuj" path="res://scenes/song_scenes/driftintothesun_scene.tscn" id="3_2lb60"]
[ext_resource type="PackedScene" uid="uid://ded4don8t8gwt" path="res://scenes/song_scenes/spydungeon_scene.tscn" id="4_s4fqh"]
[ext_resource type="PackedScene" uid="uid://ch62adtgahhjb" path="res://scenes/song_scenes/foginthetv.tscn" id="5_mtvot"]
[ext_resource type="PackedScene" uid="uid://bu7spjaendgs4" path="res://scenes/song_scenes/avoidthevoid_scene.tscn" id="6_s4fqh"]
[ext_resource type="PackedScene" uid="uid://b0gwyt7bty4da" path="res://scenes/song_scenes/ok110bpm.tscn" id="7_hv4f0"]
[ext_resource type="PackedScene" uid="uid://brkpxqpeqnnpw" path="res://scenes/song_scenes/scaryrobotnoise_scene.tscn" id="8_07ks5"]
[ext_resource type="PackedScene" uid="uid://c8k0awup731s0" path="res://scenes/song_scenes/spacesims3_scene.tscn" id="8_hv4f0"]
[ext_resource type="PackedScene" uid="uid://bjo87rxgguelq" path="res://scenes/song_scenes/symbioteinmycomputer_scene.tscn" id="9_07ks5"]
[ext_resource type="PackedScene" uid="uid://d3y1dtycdj6y2" path="res://scenes/song_scenes/spookybells168bpm.tscn" id="10_fcry4"]
[ext_resource type="PackedScene" uid="uid://b1o0ny5o0tj5h" path="res://scenes/song_scenes/secretagent_scene.tscn" id="11_xxknl"]

[sub_resource type="ViewportTexture" id="ViewportTexture_vs02b"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_hv4f0"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_07ks5"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_s4fqh"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_fcry4"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_ih2vb"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_xxknl"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_12112"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_kyb01"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_nkr6t"]
viewport_path = NodePath("ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent/SubViewport")

[node name="start_menu" type="Node2D"]
script = ExtResource("1_vs02b")

[node name="ButtonsPanelContainer" type="PanelContainer" parent="."]
offset_left = 165.0
offset_top = 10.0
offset_right = 1727.0
offset_bottom = 1062.0

[node name="ButtonsScrollContainer" type="ScrollContainer" parent="ButtonsPanelContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ButtonsGridContainer" type="GridContainer" parent="ButtonsPanelContainer/ButtonsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="driftintothesun" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_vs02b")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun"]

[node name="driftintothesun_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun/SubViewport" instance=ExtResource("3_2lb60")]
previewMode = true

[node name="spydungeon" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_hv4f0")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon"]

[node name="spydungeon_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon/SubViewport" instance=ExtResource("4_s4fqh")]
previewMode = true

[node name="foginthetv" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_07ks5")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv"]

[node name="foginthetv_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv/SubViewport" instance=ExtResource("5_mtvot")]
previewMode = true

[node name="avoidthevoid" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_s4fqh")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid"]

[node name="avoidthevoid" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid/SubViewport" instance=ExtResource("6_s4fqh")]
previewMode = true

[node name="ok110bpm" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_fcry4")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm"]

[node name="ok110bpm_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm/SubViewport" instance=ExtResource("7_hv4f0")]
previewMode = true

[node name="scaryrobotnoise" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_ih2vb")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise"]

[node name="scaryrobotnoise_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise/SubViewport" instance=ExtResource("8_07ks5")]
previewMode = true

[node name="simulatedspace" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_xxknl")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace"]

[node name="simulatedspace_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace/SubViewport" instance=ExtResource("8_hv4f0")]
previewMode = true

[node name="symbioteinmycomputer" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_12112")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer"]

[node name="symbiote_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer/SubViewport" instance=ExtResource("9_07ks5")]
previewMode = true

[node name="spookybells" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_kyb01")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells"]

[node name="spookybells_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells/SubViewport" instance=ExtResource("10_fcry4")]
previewMode = true

[node name="secretagent" type="Button" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("ViewportTexture_nkr6t")

[node name="SubViewport" type="SubViewport" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent"]

[node name="secretagent_scene" parent="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent/SubViewport" instance=ExtResource("11_xxknl")]
previewMode = true

[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun/SubViewport/driftintothesun_scene" method="_on_driftintothesun_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/driftintothesun/SubViewport/driftintothesun_scene" method="_on_driftintothesun_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon/SubViewport/spydungeon_scene" method="_on_spydungeon_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spydungeon/SubViewport/spydungeon_scene" method="_on_spydungeon_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv/SubViewport/foginthetv_scene" method="_on_foginthetv_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/foginthetv/SubViewport/foginthetv_scene" method="_on_foginthetv_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid/SubViewport/avoidthevoid" method="_on_avoidthevoid_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/avoidthevoid/SubViewport/avoidthevoid" method="_on_avoidthevoid_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm/SubViewport/ok110bpm_scene" method="_on_ok_110_bpm_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/ok110bpm/SubViewport/ok110bpm_scene" method="_on_ok_110_bpm_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise/SubViewport/scaryrobotnoise_scene" method="_on_scaryrobotnoise_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/scaryrobotnoise/SubViewport/scaryrobotnoise_scene" method="_on_scaryrobotnoise_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace/SubViewport/simulatedspace_scene" method="_on_simulatedspace_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/simulatedspace/SubViewport/simulatedspace_scene" method="_on_simulatedspace_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer/SubViewport/symbiote_scene" method="_on_symbioteinmycomputer_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/symbioteinmycomputer/SubViewport/symbiote_scene" method="_on_symbioteinmycomputer_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells/SubViewport/spookybells_scene" method="_on_spookybells_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/spookybells/SubViewport/spookybells_scene" method="_on_spookybells_focus_exited"]
[connection signal="focus_entered" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent/SubViewport/secretagent_scene" method="_on_secretagent_focus_entered"]
[connection signal="focus_exited" from="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent" to="ButtonsPanelContainer/ButtonsScrollContainer/ButtonsGridContainer/secretagent/SubViewport/secretagent_scene" method="_on_secretagent_focus_exited"]
